# silly-programs

./: .gitignore  Cargo.toml
loki-test/: Cargo.toml
loki-test/src/: main.rs
man/: silly-echo.1  silly-seq.1  silly-tee.1  sillyecho.1
server/: Cargo.toml
server/src/: app.rs  lib.rs  main.rs
server/templates/: base.html  welcome.html
silly-echo/: Cargo.toml
silly-echo/src/: main.rs
silly-echo/tests/: cli.rs
silly-seq/: Cargo.toml
silly-seq/src/: main.rs
silly-seq/tests/: cli.rs
silly-tee/: Cargo.toml
silly-tee/src/: main.rs
silly-tee/tests/: cli.rs
