[package]
name = "loki-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-loki = "0.2.0"
tracing-subscriber = "0.3.11"
tokio = { version = "1.18.2", features = [ "full" ] }
url = "2.2.2"
statsd = "0.15.0"
tracing = "0.1.34"
toml = "0.5.9"
serde = "1.0.137"

