[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
axum = "0.5.5"
tokio = { version = "1.18.2", features = [ "full" ] }
tracing-subscriber = "0.3.11"
tracing = "0.1.34"
tower-http = { version = "0.3.3", features = ["trace"] }
hyper = { version = "0.14.18", features = ["full"]}
serde_json = "1.0.81"
mime = "0.3.16"


[dev-dependencies]
tower = { version = "0.4.12", features = [ "util"]}
scraper = "0.13.0"